# motivational-meme-generator

./: .gitattributes  Guide.ipynb  README.md  app.py  main.py  practice_script.py  pyproject.toml  requirements.txt
DogQuotes/: DogQuotesDOCX.docx  DogQuotesTXT.txt
FileHandler/: file_handler.py
MemeGenerator/: file_handler.py  file_picker.py  meme.py  meme_generator.py
QuoteEngine/: __init__.py  ingestors.py  quote_engine.py  quote_model.py
SimpleLines/: SimpleLines.docx  SimpleLines.txt
