[tool.poetry]
name = "mot-meme-generator"
version = "0.1.0"
description = "Motivational meme generator"
authors = ["Matěj Dvořáček"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
pillow = "^10.4.0"
black = "^24.8.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
python-docx = "^1.1.2"
flake8 = "7.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-isort = "^6.1.1"
flake8-polyfill = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
